# anamnesis

./: .coverage  .dockerignore  .env.example  .env.testnet.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  API.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  SETUP.md  WHITEPAPER.md  check_key.py  demo_both.bat  demo_mainnet.bat  demo_testnet.bat  docker-compose.yml  fix_crypto.py  pyproject.toml  railway.toml  requirements.txt  vercel.json
api/: limiter.py  main.py  mcp_server.py  models.py  provision_store.py  session_store.py
contracts/: ContextValidator.sol
frontend/: app.js  auth.js  billing.js  chat.js  config.js  index.html  standalone-chat.html  style.css  vault-context.js
frontend-src/: .env.production  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
frontend-src/src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
frontend-src/src-tauri/.cargo/: config.toml
frontend-src/src-tauri/icons/: convert-icon.mjs  icon.icns
frontend-src/src-tauri/src/: main.rs
mobile/: .gitignore  App.tsx  app.json  package-lock.json  package.json
scripts/: award_badge.py  context_manager.py  deploy_contract_mainnet.py  enhance_vault.py  generate_promo_keys.py  init_mainnet.py  init_testnet.py  package_push.py  package_query.py  push_drake_vault.py  seed_demo.py  session_guard.py  session_manager.py  vault_health.py  vault_pull.py  vault_push.py
src/: bounded_contexts.py  calendar_store.py  (+22 more)
(+111 files in other folders)
