[package]
name = "context-sovereignty"
version = "0.1.0"
description = "Sovereign AI Context — desktop client"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8", features = [
  "shell-open",
  "system-tray",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
