[package]
name = "artyfitchels"
version = "0.1.0"
description = "Arty Fitchel's — Your AI companion that never resets"
authors = ["Arty Fitchel's LLC"]
license = "UNLICENSED"
repository = "https://github.com/gamilu/artyfitchels"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8", features = [
  "shell-open",
  "shell-execute",
  "fs-all",
  "dialog-all",
  "system-tray",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
